--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-md/icon": "^5.1.6",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "framer-motion": "^12.0.6",
     "mongoose": "^8.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-refresh-webpack-plugin": "^0.1.0",
     "react-router-dom": "^6.26.1"
   },
